[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -240,9 +240,16 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_grid .gridFooterTDDefault{background: #f7f7f7;border-width:0 0 0 0;}
 .cm_grid td.gridBodyDefault{height:25px;}
 .cm_grid button.w2inputCalendar_button {border:0; border-radius:0 !important;}
-.cm_grid .gridBodyDefault button{background: gainsboro; border-radius: 10px;  cursor: pointer;}
-.cm_grid .gridBodyDefault button:hover{background:skyblue;}
 .cm_grid .req{background-color:#fffdd8;}
+/*
+.cm_grid .gridBodyDefault button{background: gainsboro; border-radius: 10px;  cursor: pointer;}
+.cm_grid .gridBodyDefault button:hover{background:skyblue;} */
+
+.cm_grid .gridBodyDefault button{background: gainsboro;border-radius: 3px;cursor: pointer;width: auto !important;box-sizing: border-box;padding: 1px 6px;height: auto !important;background: #eb4545;color: #fff;border: 1px solid #c93333;box-shadow: none;}
+.cm_grid .gridBodyDefault button:hover{background: #ae2222;border-color: #ae2222;}
+.cm_grid .req{background-color:#fffdd8;}
+
+
 
 /* tabControl */
 .cm_tabmenu{position:relative;padding:0;margin:0;margin:0}/* margin:15px 0 0 */
@@ -270,88 +277,64 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tbl_search .tbl_sc .btn_cm{position:relative;display:inline-block;padding:0 1px 0 0;margin:0 0 0 6px;background:url(/cm/images/contents/bg_btn_cm.png) no-repeat 100% 0;vertical-align:middle}
 .tbl_search .tbl_sc .btn_cm a{position:relative;display:inline-block;padding:4px 17px 3px 17px;height:17px;line-height:13px;font-weight:bold;color:#fff;background:url(/cm/images/contents/bg_btn_cm_f.png) no-repeat;margin-left:-3px;}
 .tbl_search .tbl_sc input{height:20px !important;}
-
 .btn_com{position:relative;display:inline-block;padding:0 3px 0 0;margin:0 0 0 3px;background:url(/cm/images/contents/bg_btn_com.gif) no-repeat 100% 0;vertical-align:middle}
 .btn_com a{position:relative;display:inline-block;padding:4px 14px 3px 17px;height:15px;line-height:11px;font-weight:bold;color:#fff;background:url(/cm/images/contents/bg_btn_com.gif) no-repeat;margin-left:-3px;}
 
+
+
+
+
+.btn_com.right , .btn_com.left{position:relative;display:inline-block;padding: 0;margin: 0;vertical-align:middle;border: 1px solid #a5a5a5;width: 45px;height: 34px;box-sizing: border-box;border-radius: 2px;background: none;border-radius: 3px;}
+.btn_com.right a , .btn_com.left a{text-indent: -9999px;font-size: 0;display: block;position: relative;background: none;}
+.btn_com.right {}
+.btn_com.left{}
+.btn_com.right a:before {content: "\f054";width: 30px;display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;font-size: 16px;margin: 0 auto;position: absolute;top: 8px;left: 11px;text-indent: 0;text-align: center;color: #656565;}
+.btn_com.left a:before {content: "\f053";width: 30px;display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;font-size: 16px;margin: 0 auto;position: absolute;top: 8px;left: 8px;text-indent: 0;text-align: center;color: #656565;}
+.btn_com.right:hover  , .btn_com.left:hover  {background:#f2f3f6}
+.btn_com.right:hover a , .btn_com.left:hover a {    animation: aniLR 1s infinite;}
+
+	@keyframes aniLR { 
+		0%{transform:translateX(2.5px);} 
+		50%{transform:translateX(-2.5px);} 
+		100%{transform:translateX(2.5px);} 
+	} 
+
+
 .btn_sh{ background:#fff;}
-.btn_sh a{height:24px;line-height:24px;padding: 0 12px 0 2px;text-indent:10px;color: #3b3b3b;font-weight:bold;display:inline-block;background: white;border: 1px solid #a5a5a5;border-radius: 3px;box-sizing: border-box;}
+.btn_sh a{height:24px;line-height:24px;padding: 0 12px 0 2px;text-indent:10px;color: #ffffff;font-weight:bold;display:inline-block;background: #5b5b5b;border: 1px solid #3d3d3d;border-radius: 3px;box-sizing: border-box;}
 .btn_sh a:before {width: 22px;height: 22px;display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;margin: 0;float: left;line-height: 22px;margin-right: -6px;}
-.btn_sh a:hover {border-color:#eb4545; color:#eb545;    box-shadow: 0px 2px 3px rgb(235 69 69 / 0.3);}
-.btn_sh a:hover:before {color:#eb4545;}
-.btn_sh.end a {background: #44ADF9;color: #fff;border-color: #7e7e7e;}
+.btn_sh a:hover {border-color: #d82b2b;box-shadow: 2px 2px 3px rgb(235 69 69 / 40%);background: #eb4545;}
+.btn_sh a:hover:before {/* color:#eb4545; */}
 
-
-.btn_save{background:#fff;}
-.btn_save a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#3b3b3b; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
-
-.btn_sh.search {/* background:#fff; */}
-.btn_sh.search a{}
+.btn_sh.end a:before { content: "\f28d";}
 .btn_sh.search a:before { content: "\f002";}
-
-.btn_sh.save{background:#fff;}
-.btn_sh.save a{ }
 .btn_sh.save a:before { content:"\f0c7";}
-
-.btn_sh.del{background:#fff;}
-.btn_sh.del a{ }
 .btn_sh.del a:before { content:"\f068";}
-
-.btn_sh.exli{background:#fff;}
-.btn_sh.exli a{ }
 .btn_sh.exli a:before { content:"\f093";}
-
-.btn_sh.exl{background:#fff;}
-.btn_sh.exl a{ }
 .btn_sh.exl a:before { content:"\f1c3";}
-
-.btn_sh.exlf{background:#fff;}
-.btn_sh.exlf a{ }
 .btn_sh.exlf a:before { content:"\f1c3";}
-
-.btn_sh.add{background:#fff;}
-.btn_sh.add a{ }
 .btn_sh.add a:before { content: "\f067";}
-
-.btn_sh.close{background:#fff;}
-.btn_sh.close a{ }
 .btn_sh.close a:before { content:"\f00d";}
-
-.btn_sh.reserv{background:#fff;}
-.btn_sh.reserv a{}
-.btn_sh.reserv a:before { content: "\f0e2";}
-
-.btn_sh.play{background:#fff;}
-.btn_sh.play a{}
+.btn_sh.reserv a:before { content: "\f009";}
+.btn_sh.reservcnl a:before { content: "\f0e2";}
 .btn_sh.play a:before { content: "\f04b";}
-
-.btn_sh.confirmyn{background:#fff;}
-.btn_sh.confirmyn a{}
 .btn_sh.confirmyn a:before { content: "\f013";}
-
-.btn_sh.setting{background:#fff;}
-.btn_sh.setting a{}
 .btn_sh.setting a:before { content: "\f013";}
-
-.btn_sh.init{background:#fff;}
-.btn_sh.init a{height:24px; line-height:24px;  text-indent:10px; color:#3b3b3b; font-weight:bold;  display:inline-block;}
-
-.btn_sh.help{background:#fff;}
-.btn_sh.help a{}
+.btn_sh.init a:before { content: "\f1ce";}
 .btn_sh.help a:before { content: "\f256";}
-
-.btn_sh.clr{background:#fff;}
-.btn_sh.clr a{}
 .btn_sh.clr a:before { content:"\f112";}
 
 
-
+/* tcm */
 .btn_tcm{position:relative;display:inline-block;padding:0 2px 0 0;margin-right:3px;background:url(/cm/images/contents/bg_btn_tcm.gif) no-repeat 100% 0;vertical-align:middle}
 .btn_tcm a{position:relative;display:inline-block;padding:4px 8px 3px 10px;height:15px;line-height:11px;color:#433130;background:url(/cm/images/contents/bg_btn_tcm_f.gif) no-repeat}
 .btn_ttm{position:relative;display:inline-block;padding:0 2px 0 0;margin-right:3px;background:url(/cm/images/contents/bg_btn_ttm.gif) no-repeat 100% 0;vertical-align:middle}
 .btn_ttm a{position:relative;display:inline-block;padding:4px 8px 3px 10px;height:15px;line-height:11px;color:#433130;background:url(/cm/images/contents/bg_btn_ttm.gif) no-repeat}
-
 .btn_tcm_sh_ic{position:relative; width:22px;height:22px;padding:0;margin-right:3px; text-indent:-9999px;overflow:hidden;background:url(/cm/images/contents/bg_btn_sh_ic.png) no-repeat;display:inline-block;vertical-align:middle;}
+
+/* gcm */
+.gr_sub_header .btn_sub_generator > .btn_gcm:nth-child(1) > a {border-radius:3px 0 0 3px;}
+.gr_sub_header .btn_sub_generator > .btn_gcm:last-child  > a {border-radius:0 3px 3px 0;}
 
 .btn_gcm_art1{position:relative;display:inline-block;padding:0 2px 0 0;margin:0 0 0 3px;background:url(/cm/images/contents/bg_btn_gcm.png) no-repeat 100% 0;vertical-align:middle}
 .btn_gcm_art2{position:relative;display:inline-block;padding:0 9px 0 11px;height:22px;line-height:22px;text-align:center;font-weight:bold;color:#222;background:url(/cm/images/contents/bg_btn_gcm.png) no-repeat}
@@ -360,48 +343,74 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_gcm_arb2{position:relative;display:inline-block;padding:0 9px 0 11px;height:22px;line-height:22px;text-align:center;font-weight:bold;color:#222;background:url(/cm/images/contents/bg_btn_gcm.png) no-repeat}
 .btn_gcm_arb2 a{display:inline-block;padding-right:12px;background:url(/cm/images/contents/bul_arrw_bottom.png) no-repeat right 8px}
 
-
-.gr_sub_header .btn_sub_generator > .btn_gcm:nth-child(1) > a {border-radius:3px 0 0 3px;}
-.gr_sub_header .btn_sub_generator > .btn_gcm:last-child  > a {border-radius:0 3px 3px 0;}
 .btn_gcm{margin-left:3px;margin: 0 !important;}
-.btn_gcm a{display:inline-block;padding: 0 6px;height: 24px;line-height: 24px;font-weight:bold;color: #000;width:100%;box-sizing:border-box;background: #f7f7f7;border-radius: 0;border: 1px solid #cecece;margin-left: -1px;min-width: 50px;text-align: center;}
+.btn_gcm a{display:inline-block;padding: 0 6px 0 3px;height: 24px;line-height: 24px;font-weight:bold;color: #000;width:auto !important;box-sizing:border-box;background: #f7f7f7;border-radius: 0;border: 1px solid #cecece;margin-left: -1px;min-width: 60px;text-align: center;}
 .btn_gcm a:hover{background: #7e7e7e;color: #fff;border-color: #7e7e7e;}
+.btn_gcm a:before {width: 23px;height: 24px;display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;margin: 0;float: left;line-height: 24px;margin-right: -4px;box-sizing: border-box;display: block;}
+
 .btn_gcm.end a{background: #44ADF9;color: #fff;border-color: #7e7e7e;}
 .btn_gcm.search {margin-left:3px;  }
 .btn_gcm.search a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.search a:before {    content: "\f002";}
+
 .btn_gcm.save {margin-left:3px;  }
 .btn_gcm.save a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.save a:before {   content: "\f0c7"; }
+
 .btn_gcm.del {margin-left:3px;  }
 .btn_gcm.del a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.del a:before { content:"\f068";}
+
 .btn_gcm.exli {margin-left:3px;  }
 .btn_gcm.exli a{display:inline-block; width:100%;box-sizing:border-box;}
+
 .btn_gcm.exl {margin-left:3px;  }
 .btn_gcm.exl a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.exli a:before { content:"\f093";}
+
 .btn_gcm.exlf {margin-left:3px;  }
 .btn_gcm.exlf a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.exl a:before { content:"\f1c3";}
+
+.btn_sh.exlf a:before { content:"\f1c3";}
+
 .btn_gcm.add {margin-left:3px;  }
 .btn_gcm.add a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.add a:before { content: "\f067";}
+
 .btn_gcm.close {margin-left:3px;  }
 .btn_gcm.close a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.close a:before { content:"\f00d";}
+
 .btn_gcm.reserv {margin-left:3px;  }
 .btn_gcm.reserv a{display:inline-block; width:100%;box-sizing:border-box;}
+
 .btn_gcm.play {margin-left:3px;  }
 .btn_gcm.play a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.play a:before { content: "\f04b";}
+
 .btn_gcm.confirmyn {margin-left:3px;  }
 .btn_gcm.confirmyn a{display:inline-block; width:100%;box-sizing:border-box;}
+
 .btn_gcm.setting {margin-left:3px;  }
 .btn_gcm.setting a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.setting a:before { content: "\f013";}
+
 .btn_gcm.init {margin-left:3px;  }
 .btn_gcm.init a{display:inline-block; width:100%;box-sizing:border-box;}
+
 .btn_gcm.help {margin-left:3px;  }
 .btn_gcm.help a{display:inline-block; width:100%;box-sizing:border-box;}
+
 .btn_gcm.clr {margin-left:3px;  }
 .btn_gcm.clr a{display:inline-block; width:100%;box-sizing:border-box;}
+
 .btn_gcm.addPath {margin-left:3px;  }
 .btn_gcm.addPath a{display:inline-block; width:100%;box-sizing:border-box;}
 
 .btn_upload {margin-left:3px; background:url(/cm/images/contents/bg_btn_left_repeat.gif) left top repeat-x;}
 .btn_upload a {padding:0 20px 0 12px; display:inline-block; height:22px; line-height:20px; font-weight:bold; background:url(/cm/images/contents/bg_btn_right_up.gif) right top no-repeat; color:#fff;}
+
 .btn_download {margin-left:3px; background:url(/cm/images/contents/bg_btn_left_repeat.gif) left top repeat-x;}
 .btn_download a {padding:0 20px 0 12px; display:inline-block; height:22px; line-height:22px; font-weight:bold; background:url(/cm/images/contents/bg_btn_right_down.gif) right top no-repeat; color:#fff;}
 
@@ -409,9 +418,84 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_blu{font-weight: bold; background: #9dd3f7; border: 1px solid #e5e5e5; padding: 2px 5px; margin-right: 5px; display: inline-block;}
 .btn_org{font-weight: bold; background: #f0a24d; border: 1px solid #e5e5e5; padding: 2px 5px; margin-right: 5px; display: inline-block;}
 
-
 .btn_fix{padding-top:10px;position:absolute;left:0;right:0;bottom:0;text-align:right;background:#fff;z-index:9999; border-top:1px solid #c8cad0;padding:5px 19px;}
 .pop_M .btn_fix{bottom:0;padding-bottom:20px;}
+
+.btn_gcm.oldNode {margin-left:3px;  }
+.btn_gcm.oldNode a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.oldNode a:before { content:"\f041";}
+
+.btn_gcm.addPath {margin-left:3px;  }
+.btn_gcm.addPath a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.addPath a:before { content:"\f067";}
+
+.btn_gcm.addVertex {margin-left:3px;  }
+.btn_gcm.addVertex a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.addVertex a:before { content:"\f067";}
+
+.btn_gcm.addSttn {margin-left:3px;  }
+.btn_gcm.addSttn a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.addSttn a:before { content:"\f067";}
+
+.btn_gcm.addCrs {margin-left:3px;  }
+.btn_gcm.addCrs a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.addCrs a:before { content:"\f067";}
+
+.btn_gcm.cut {margin-left:3px;  }
+.btn_gcm.cut a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.cut a:before { content:"\f0c4";}
+
+.btn_gcm.up {margin-left:3px;  }
+.btn_gcm.up a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.up a:before { content:"\f062";}
+
+.btn_gcm.down {margin-left:3px;  }
+.btn_gcm.down a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.down a:before { content:"\f063";}
+
+.btn_gcm.reflect {margin-left:3px;  }
+.btn_gcm.reflect a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.reflect a:before { content:"\f00c";}
+
+.btn_gcm.autoApply {margin-left:3px;  }
+.btn_gcm.autoApply a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.autoApply a:before { content:"\f110";}
+
+.btn_gcm.intervalTime {margin-left:3px;  }
+.btn_gcm.intervalTime a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.intervalTime a:before { content:"\f1da";}
+
+.btn_gcm.getSigPlan {margin-left:3px;  }
+.btn_gcm.getSigPlan a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.getSigPlan a:before { content:"\f019";}
+
+
+.btn_gcm.bus {margin-left:3px;  }
+.btn_gcm.bus a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.bus a:before { content:"\f207";}
+
+.btn_gcm.pin {margin-left:3px;  }
+.btn_gcm.pin a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.pin a:before { content:"\f276";}
+
+.btn_gcm.share{margin-left:3px;  }
+.btn_gcm.share a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.share a:before { content:"\f064";}
+
+.btn_gcm.history{margin-left:3px;  }
+.btn_gcm.history a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.history a:before { content:"\f1da";}
+.btn_gcm.sendOperPlan{margin-left:3px;  }
+.btn_gcm.sendOperPlan a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.sendOperPlan a:before { content:"\f148";}
+
+.btn_gcm.getOperPlan{margin-left:3px;  }
+.btn_gcm.getOperPlan a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.getOperPlan a:before { content:"\f149";}
+
+
+
+
 
 
 /* ### */
@@ -428,7 +512,6 @@ a:hover,a:active,a:focus{text-decoration:none}
 .w2trigger{border-radius:3px;height:22px;line-height:19px;padding:0 20px;}
 .ico_help:hover , .ico_refresh:hover , .ico_refresh_b:hover {    color: #383d41;}
 
-
 .contentWrap{ padding:0px 10px 10px 10px;overflow:hidden;}
 
 .btn_le{height: 19px; width: 20px; background: url(/cm/images/contents/btn_le.gif) no-repeat left top; float: left;}
@@ -436,7 +519,6 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_ri{height: 19px; width: 21px; background: url(/cm/images/contents/btn_ri.gif) no-repeat left top; float: left;}
 
 .schedule{margin: 5px 0 0;}
-
 
 .w2tb.b0 .w2tb_td {border:0 !important;}
 .w2tb_td.vat{vertical-align:top;}
