--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -258,24 +258,33 @@ body {
 .head_box .nav > li.on{background:#3879d9}
 .head_box .nav > li > a{display:block;margin:0;color:#fff;width: 149px;line-height:44px;font-weight:bold;text-align: center;font-size: 14px;}
 
-.head_box .nav > li .submenu{display:none;position:absolute;left:-30px;top:44px;background:#fff;z-index:1000;text-indent:15px;border: 1px solid #c4cad6;border-top:none;width: 200px;}
+.head_box .nav > li .submenu{display:none;position:absolute;left:-30px;top:44px;background: #3d3d3d;z-index:1000;text-indent:15px;border: 1px solid #c4cad6;border-top:none;width: 200px;box-shadow: 3px 3px 5px rgb(134 134 134 / 30%);}
 .head_box .nav > li .submenu.on{display:block;}
 .head_box .nav > li .submenu > li:last-child {border-bottom: none;}
-.head_box .nav > li .submenu > li{position:relative;line-height:27px;width: 100%;border-bottom: 1px solid #e4e4e4;letter-spacing: -1px;}
-.head_box .nav > li .submenu > li > a{display:block;background: url(/cm/images/inc/ico_gnb_plus.png) no-repeat 184px center;padding:3px;}
+.head_box .nav > li .submenu > li{position:relative;line-height:27px;width: 100%;border-bottom: 1px solid #747474;letter-spacing: -1px;}
+.head_box .nav > li .submenu > li > a{display:block;background: url(/cm/images/inc/ico_gnb_plus.png) no-repeat 184px center;padding:3px;color: #fff !important;}
 .head_box .nav > li .submenu > li > a:hover,
-.head_box .nav > li .submenu > li > a.on{background: #f7f8fb url(/cm/images/inc/ico_gnb_minus.png) no-repeat 184px center;}
+.head_box .nav > li .submenu > li > a.on{/* background: #f7f8fb url(/cm/images/inc/ico_gnb_minus.png) no-repeat 184px center; */background: #a13e3e url(/cm/images/inc/ico_gnb_minus.png) no-repeat 184px center;}
 .head_box .nav > li .submenu > li:first-child > a{border-top: 0;}
 .head_box .nav > li .submenu > li:last-child > a{border-bottom: 0;}
-.head_box .nav > li .submenu > li > .depth3{display:none;position:absolute;left: 200px;top:0px;background:#fff;border: 1px solid #c4cad6;box-shadow: 3px 3px 5px rgb(134 134 134 / 0.3);}
+.head_box .nav > li .submenu > li > .depth3{display:none;position:absolute;left: 200px;top: 0;background:#fff;border: 1px solid #c4cad6;border-top: 2px solid #a13e3e;border-bottom: 2px solid #a13e3e;box-sizing: border-box;padding: 5px 0;}
 .head_box .nav > li .submenu > li > .depth3.on{display:block;}
 .head_box .nav > li .submenu > li > .depth3 > li{line-height:27px;background: #ffffff;}
 #winc_header .head_box .nav > li .submenu > li > .depth3 > li{width:158px; text-indent:15px;}
 .head_box .nav > li .submenu > li > .depth3 > li:last-child > a{}
-.head_box .nav > li .submenu > li > .depth3 > li > a{display: block; overflow: hidden; text-overflow:ellipsis; padding:3px;}
-.head_box .nav > li .submenu > li > .depth3 > li > a:hover{background:#f7f8fb}
+.head_box .nav > li .submenu > li > .depth3 > li > a{display: block;overflow: hidden;text-overflow:ellipsis;padding: 3px 0;line-height: 22px;height: 22px;}
+.head_box .nav > li .submenu > li > .depth3 > li > a:hover{background:#f7f8fb;text-decoration: underline;}
 
-
+.head_box .nav > li .submenu > li > .depth3 > li > a:before {
+    content: '';
+    width: 2px;
+    height:2px;
+    border-radius: 4px;
+    background: #000;
+    display: inline-block;
+    vertical-align: 5px;
+    margin: 0 6px  0 0;
+}
 
 .head_box .nav > li > a:after {display:block;position:absolute;left: 50%;bottom: 0;content:'';width: 0;height:4px;background: #eb4545;transition: all 0.3s;-webkit-transition: all 0.3s;}
 .head_box .nav > li > a.on:after {left:15%; width:70%;}
