[양현우] 실시간 위치정보 모니터링 '비정상' -> '고장', 버스 운행 현황

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -213,6 +213,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 /* grid */
 .cond_abnormal {background:#F78181;}
 .cond_normal {background:#A9F5A9;}
+.cond_neutrality {background:#fffccb;}
 .cm_gridbox{position:relative;padding:0;margin:0;}
 .cm_grid{
 		 /* border-top:2px solid rgba(0,61,124,1); */
@@ -764,7 +765,17 @@ a:hover,a:active,a:focus{text-decoration:none}
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     padding: 7px;
-    font-size: 10px;	
+    font-size: 12px;	
+}
+
+.map_busstatus .status_green
+{
+    border-bottom: 3px solid #28c613;
+}
+
+.map_busstatus .status_red
+{
+    border-bottom: 3px solid #f11406;
 }
 
 .map_busstatus .status_kinds
@@ -775,7 +786,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 .map_busstatus .status_count
 {
-	text-align : right;
+	text-align : center;
+	width : 30px;	
 }
 
 /* 지현추가 : font-awesome.css */
