--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -329,7 +329,7 @@ body {
 .infobox .info_tit.department_tit{color:#fff;padding-right:10px}
 .infobox .w2input{border:1px solid #747578;background:#3c404a;color:#fff}
 .infobox .logout{display:inline-block;width:68px;height:23px;padding:0;margin:0 0 0 5px;border:0;color:#fff;line-height:23px;background: #eb4545;border-radius:13px;-moz-border-radius:13px;vertical-align:middle;border: 1px solid #fff;}
-.infobox .changePassword{display:inline-block;width:88px;height:23px;padding:0;margin:0;border:0;color:#fff;line-height:23px;background: url('/cm/images/add/icon_edit.png') no-repeat right 5px;border-radius:13px;-moz-border-radius:13px;vertical-align:middle;padding: 0 11px 0 0;margin: 0 5px;}
+.infobox .changePassword{display:inline-block;width:88px;height:23px;padding:0;margin:0;border:0;color:#fff;line-height:23px;background: url('/cm/images/add/icon_edit.png') no-repeat right 5px;vertical-align:middle;padding: 0 11px 0 0;margin: 0 5px;}
 
 .gmbox{position:absolute;top:12px;right:19px;height:20px;}
 .gmbox > a{position:relative;display:inline-block;padding:0;margin:0 0 0 7px;width:21px;height:21px;font-size:0;overflow:hidden;text-indent:-9999px;vertical-align:middle}
