[백승종] 수정사항적용

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -242,8 +242,10 @@ body {
 
 /* Header */
 .head_top{position:relative;height:44px;background: #ffffff /* url(/cm/images/add/logo_bg.png) */ no-repeat 99% 7px;}
-.head_top a.logo{display:block;position:absolute;left: 28px;top: 11px;width:211px;height:22px;background: #daf3d6 url('/cm/images/add/logo.png') no-repeat 0 0;}
+.head_top a.logo{display:block;position:absolute;left: 28px;top: 11px;width:211px;height:22px;background: #daf3d6 url('/cm/images/bms/logo.png') no-repeat 0 0;}
 .head_top a.logo > img {display: none;}
+.head_top a.logo_brt{display:block;position:absolute;left: 28px;top: 11px;width:211px;height:22px;background: #daf3d6 url('/cm/images/brt/logo_brt.png') no-repeat 0 0;}
+.head_top a.logo_brt > img {display: none;}
 .sysbtnbox{position:absolute;top: 55px;right: 330px;height: 23px;z-index: 999;}
 .sysbtnbox .bms{display:inline-block;margin:0 0 0 5px;border:0;color:#fff;background: url('/cm/images/add/bg_arrow.png') no-repeat right 10px;box-sizing: border-box;-moz-border-radius:13px;vertical-align:middle;padding: 0 19px 0 0;font-family: 'Noto Sans',"Helvetica", "Arial", sans-serif;font-size: 14px;height: 23px;}
 .sysbtnbox .bms:hover {font-weight: bold;}
