--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -563,27 +563,42 @@ a:hover,a:active,a:focus{text-decoration:none}
 /* login Page */
 .login_wrap{position:relative; width:100%;min-width:320px;height:100%;}
 .login_wrap .bg_img{position:absolute; top:25%; left:0; right:0; height:365px; background: #70787e url(/cm/images/contents/login_visual.png) no-repeat center top;}
-.login_wrap .bg_img .bg_logo{position:absolute; left: 50%;top: -140px; width:619px; height: 117px; background: url(/cm/images/contents/img_logo.gif) no-repeat; margin-left: -310px;}
-.login_wrap .box{position:absolute; bottom:40px; text-align: center; left: 20px;top:40px; right:20px; width:500px; margin:0 auto;}
-.login_wrap .box li{display:block; overflow:hidden; margin-bottom:20px;}
-.login_wrap .box li ul {position:relative; overflow:hidden; height:72px;}
-.login_wrap .box li ul li{position:absolute;}
-.login_wrap .box li:first-child ul li:first-child{left:0; width:60px; height:72px; background:url(/cm/images/contents/bg_login_form_left1.png) no-repeat left top;}
-.login_wrap .box li:first-child ul li.repeat{height: 72px; left: 60px; right: 60px; background:url(/cm/images/contents/bg_login_form_repeat.png) repeat-x center top;}
-.login_wrap .box li:first-child ul li.repeat input{width:100%; height:50px; box-sizing:border-box; position: absolute; left: 0; right: 0; bottom: 10px; top: 10px; background: transparent; border: 0; color:#fff; font-weight: bold; font-size: 15px;}
-.login_wrap .box li:first-child ul li.repeat input:focus{outline:0;}
-.login_wrap .box li:first-child ul li:last-child{right:0; width:60px; height:72px; background:url(/cm/images/contents/bg_login_form_right.png) no-repeat right top;}
+.login_wrap .bg_img .bg_logo{position:absolute; left: 50%;top: -140px; width:719px; height: 117px; background: url(/cm/images/login/login_logo.png) no-repeat; margin-left: -310px;}
 
-.login_wrap .box li.pw ul li:first-child{left:0; width:60px; height:72px; background:url(/cm/images/contents/bg_login_form_left2.png) no-repeat left top;}
-.login_wrap .box li.pw ul li.repeat{height: 72px; left: 60px; right: 60px; background:url(/cm/images/contents/bg_login_form_repeat.png) repeat-x center top;}
+.login_wrap .box{position:absolute; bottom:20px; text-align: center; top:20px; right:200px; width:500px; margin:0 auto;}
+.login_wrap .box li{display:block; overflow:hidden; margin-bottom:20px;}
+
+.login_wrap .box li.system {position:relative; overflow:hidden; height:65px;}
+.login_wrap .box li.system .system_select {position:relative; overflow:hidden; height:30px;}
+
+.login_wrap .box li ul {position:relative; overflow:hidden; height:65px;}
+.login_wrap .box li ul li{position:absolute;}
+
+.login_wrap .box li.id ul li:first-child{left:0; width:60px; height:65px; background:url(/cm/images/contents/bg_login_form_left1.png) no-repeat left top;}
+.login_wrap .box li.id ul li.repeat{height: 65px; left: 60px; right: 60px; background:url(/cm/images/contents/bg_login_form_repeat.png) repeat-x center top;}
+.login_wrap .box li.id ul li.repeat input{width:100%; height:50px; box-sizing:border-box; position: absolute; left: 0; right: 0; bottom: 10px; top: 10px; background: transparent; border: 0; color:#fff; font-weight: bold; font-size: 15px;}
+.login_wrap .box li.id ul li.repeat input:focus{outline:0;}
+.login_wrap .box li.id ul li:last-child{right:0; width:60px; height:65px; background:url(/cm/images/contents/bg_login_form_right.png) no-repeat right top;}
+
+.login_wrap .box li.pw ul li:first-child{left:0; width:60px; height:65px; background:url(/cm/images/contents/bg_login_form_left2.png) no-repeat left top;}
+.login_wrap .box li.pw ul li.repeat{height: 65px; left: 60px; right: 60px; background:url(/cm/images/contents/bg_login_form_repeat.png) repeat-x center top;}
 .login_wrap .box li.pw ul li.repeat input{width:100%; height:50px; box-sizing:border-box; position: absolute; left: 0; right: 0; bottom: 10px; top: 10px; background: transparent; border: 0; color:#fff; font-weight: bold; font-size: 15px;}
 .login_wrap .box li.pw ul li.repeat input:focus{outline:0;}
-.login_wrap .box li.pw ul li:last-child{right:0; width:60px; height:72px; background:url(/cm/images/contents/bg_login_form_right.png) no-repeat right top;}
+.login_wrap .box li.pw ul li:last-child{right:0; width:60px; height:65px; background:url(/cm/images/contents/bg_login_form_right.png) no-repeat right top;}
 
 .login_wrap .box .anc_mem{float:left; color:#fff; font-weight:bold; font-size: 15px;}
-.login_wrap .box .anc_forget{float:right; color:#ffd600; font-weight:bold; font-size: 15px;}
-.login_wrap .box li:last-child{text-align:center; margin:0;}
-.login_wrap .box li:last-child a{display:block; height:60px; line-height:60px; background: #01a595 url(/cm/images/contents/bg_img_login.gif) no-repeat center center; border-radius: 5px;}
+.login_wrap .box .login_msg{float:left;}
+.login_wrap .box .login_msg .message1{float:left; color:#ffffff; font-weight:bold; font-size: 15px;}
+.login_wrap .box .login_msg .message2{float:left; color:#ffffff; font-weight:bold; font-size: 15px;}
+
+.login_wrap .login_btn{position:absolute; top:100px; width:100px; heigt:150px; right:20px; text-align:center; margin:0; }
+.login_wrap .login_btn a{display:block; height:150px; line-height:60px; background: #01a595 url(/cm/images/contents/bg_img_login.gif) no-repeat center center; border-radius: 5px;}
+
+.login_wrap .org_logo {position:absolute; bottom:15%; left:30%; height:100px;}
+.login_wrap a.logo_molit{display:block;position:relative;float:left; width:211px;height:100px;background:  url('/cm/images/login/molit_log.gif') no-repeat 0 0;}
+.login_wrap a.logo_kaia{display:block;position:relative;float:left; width:211px;height:100px;background:  url('/cm/images/login/kaia_ci.png') no-repeat 0 0;}
+.login_wrap a.logo_sejong{display:block;position:relative;float:left; width:211px;height:100px;background:  url('/cm/images/login/sejong_ci.png') no-repeat 0 0;}
+.login_wrap a.logo_krri{display:block;position:relative;float:left; width:211px;height:100px;background:  url('/cm/images/login/krri_logo.png') no-repeat 0 0;}
 
 /*********************************** LAYOUT **************************************/
 #wrap{position:relative;width:100%;min-width:1016px;height:100%;min-height:300px;margin:0;padding:0}
