[양현우] 클릭 오버레이 진행중 주석처리

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -703,6 +703,78 @@ a:hover,a:active,a:focus{text-decoration:none}
     background: url(/cm/images/tmap/vertex_white.png);
 }
 
+.clickoverlay {
+    background: #fff;
+    position: relative;
+    bottom: 57px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;	
+    /* position: absolute;
+    left: 761px;
+    top: 407px;	 */
+    z-index: 10000000000;
+}
+
+.clickoverlay:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_white.png);
+}
+
+.clickoverlay .tit {
+	padding: 14px 40px 14px 14px;
+    font-size: 14px;
+    color: #303030;
+    background-color: #f5f8fc;
+    border-bottom: 1px solid #9e9e9e;
+}
+
+.clickoverlay #popup-refresh{
+    right: 40px;
+    background: url(/cm/images/tmap/layer_refresh.png) center center no-repeat;
+	position: absolute;
+    width: 15px;
+    height: 15px;
+    right: 15px;
+    top: 15px;
+    opacity: 1;       	
+}
+
+.clickoverlay #popup-closer{
+    right: 40px;
+    background: url(/cm/images/tmap/layer_close.png) center center no-repeat;
+	position: absolute;
+    width: 15px;
+    height: 15px;
+    right: 15px;
+    top: 15px;
+    opacity: 1;    	
+}
+
+.clickoverlay .blind {
+    display: block;
+    overflow: hidden;
+    top: -1000em;
+    position: absolute;
+}
+
+.clickoverlay .content {
+	padding: 8px;
+}
+
+.clickoverlay .trafficInfor {
+    max-height: 200px;
+    overflow-y: auto;
+}
+    
 .conderror {
     background: #eb4545;
     color : white;
@@ -824,12 +896,12 @@ a:hover,a:active,a:focus{text-decoration:none}
     border-radius: 5px;
     border: 1px solid #909090;
     box-shadow: 0 1px 1px rgb(0 0 0 / 40%);
-    background: #fff;
+    background: #eee;
     overflow: hidden;
     z-index: 2;
     bottom: 5px;}
 .moni_img li {float:left;list-style: none;width:50px;px;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer; width: 100px;}
-.moni_img li.on {background: #eee;}
+.moni_img li.on {background: #fff;}
 .moni_img li:hover {background: #ffe6e6;border-left:1px solid #acacac;margin-left: -1px;}
 .moni_img li:last-child{margin-right:0;border-right:0;}
 .moni_img li span {display: block;margin:0 auto 3px;width:27px;height: 28px;}
@@ -926,11 +998,6 @@ a:hover,a:active,a:focus{text-decoration:none}
     padding: 0 5px;
     margin: 0;
 }
-
-
-
-
-
 
 
 /* 지현추가 : font-awesome.css */
