[양현우] 실시간 위치정보 모니터링 맵 타입 설정 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -928,7 +928,7 @@ a:hover,a:active,a:focus{text-decoration:none}
     background-color: #fff;
     z-index : 3;
     float: right;
-    top: 10px;
+    top: 90px;
     right: 10px;
     position: absolute;    
 }
@@ -999,6 +999,120 @@ a:hover,a:active,a:focus{text-decoration:none}
     margin: 0;
 }
 
+.map-type {
+    position: absolute;
+    right: 10px;
+    margin-top: 15px
+}
+
+.map-type div {
+/*     list-style: none;
+    margin: 0;
+    padding: 0;	 */
+    display: flex;
+}
+
+.map-type a {
+	display: block;
+    overflow: hidden;
+    background-clip: padding-box;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 10%);
+    border: 1px solid rgba(0,0,0,.2);
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    color: #000;
+	transform: scale(1);
+    border-color: rgba(0, 0, 0, 0.2);
+    margin-left: 10px;    	
+}
+
+.map-type a.active{
+    border: 2px solid #eb4545;
+}
+
+.map-type span{
+    display: block;
+    padding: 5px 0;
+    background-color: #fff;
+    text-align: center;	
+	font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    color: #000;
+}
+
+.map-type span.active{
+	color: #eb4545;	
+    font-weight: bold;	
+}
+
+.map-type .map-type-01::before{
+	content:"";
+	overflow: hidden;
+    display: inline-block;
+    width: 62px;
+    height: 34px;
+    font-size: 0;
+    color: transparent;
+    vertical-align: top;
+	background-image: url(/cm/images/tmap/normalImage.png);
+    /* background-size: 508px 492px; */    
+}
+
+.map-type .map-type-02:before{
+	content:"";	
+	overflow: hidden;
+    display: inline-block;
+    width: 62px;
+    height: 34px;
+    font-size: 0;
+    color: transparent;
+    vertical-align: top;
+	background-image: url(/cm/images/tmap/skyviewImage.png);
+    /* background-size: 508px 492px;     */
+}
+
+.map-type .map-type-03:before{
+	content:"";	
+	overflow: hidden;
+    display: inline-block;
+    width: 62px;
+    height: 34px;
+    font-size: 0;
+    color: transparent;
+    vertical-align: top;
+	background-image: url(/cm/images/tmap/trafficImage.png);
+    /* background-size: 508px 492px;    */ 
+}
+
+/* .map-type .map-type-01 {
+    border: 2px solid #0375f4;
+    background-color: #fff;
+    vertical-align: middle;
+    padding-top: 10px;
+    font-weight: bold;
+    width: 70px;
+    height: 70px;
+    display: block;
+    border-radius: 35px;
+    margin-top: 0px;
+    margin-right: 15px;
+    cursor: pointer;	
+} */
+
+/* .map-type .map-type-01 {
+	background: url(/images/main/map01_off.png);	
+}
+
+.map-type .map-type-01 {
+	background: url(/images/main/map01_off.png);		
+}
+
+.map-type .map-type-01 {
+	background: url(/images/main/map01_off.png);	
+} */
 
 /* 지현추가 : font-awesome.css */
 
